Actualizacion a pagina de videojuegos

--- a/index.html
+++ b/index.html
@@ -3,21 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tienda de perfumes PWA">
-    <title>Tienda de Perfumes</title>
+    <meta name="description" content="Tienda de Videojuegos PWA">
+    <title>Tienda de Videojuegos/title>
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="css/style.css">
+    <script src="notificaciones.js"></script>
+    <script src="videojuegos.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Bienvenido a la Tienda de Perfumes</h1>
-        <div class="perfume-list">
-            <!-- Perfume 1 -->
-            <div class="perfume-item">
-                <img src="images/perfume1.jpg" alt="Perfume 1" class="perfume-image">
-                <div class="perfume-details">
-                    <h2 class="perfume-title">Elegancia Envuelta</h2>
-                    <p class="perfume-description">
+        <h1>Bienvenido a la Tienda de VideoJuegos</h1>
+        <div class="Videojuegos">
+            <!-- Videojuegos 1 -->
+            <div class="videojuegos-item">
+                <img src="images/perfume1.jpg" alt="VideoJuegos 1" class="videojuegos-image">
+                <div class="videojuegos-details">
+                    <h2 class="videojuegos-title">Elegancia Envuelta</h2>
+                    <p class="videojuegos-description">
                       Descripción:
                       <ul style="text-align: justify;">
                           <li><strong>Frasco:</strong> Un recipiente sofisticado que refleja la luz, adornado con detalles dorados que evocan la opulencia.</li>
@@ -26,7 +28,7 @@
                       </ul>  
                   </p>
                   <p style="text-align: justify;"><strong>Espero que esta creación te inspire y te transporte a un mundo de belleza y sofisticación.</strong></p>
-                    <p class="perfume-price">$900</p>
+                    <p class="videojuego-price">$900</p>
                     <button class="comprar-button">Comprar</button>
                 </div>
             </div>
