--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <meta name="description" content="Tienda de videojuegos PWA">
     <title>Tienda de Videojuegos</title>
     <link rel="manifest" href="manifest.json">
+    <!-- Enlace al nuevo archivo CSS externo -->
     <link rel="stylesheet" href="css/style.css">
     <script src="notificaciones.js"></script>
     <script src="videojuegos.js"></script>
 </head>
 <body>
+    <input type="checkbox" id="menu-toggle" class="menu-toggle">
+    <label for="menu-toggle">&#9776; Menu</label>
+    <div class="menu">
+        <div class="menu-item"><a href="index.html">Home</a></div>
+        <div class="menu-item"><a href="compras.html">Compras</a></div>
+        <div class="menu-item"><a href="nosotros.html">Nosotros</a></div>
+    </div>
+
     <div class="container">
         <h1>Bienvenido a la Tienda de Videojuegos</h1>
         <div class="videojuego-list">
@@ -20,14 +29,14 @@
                 <div class="videojuego-details">
                     <h2 class="videojuego-title">Epic Fantasy</h2>
                     <p class="videojuego-description">
-                      Descripción:
-                      <ul style="text-align: justify;">
-                          <li><strong>Género:</strong> Juego de rol de acción con gráficos impresionantes y una historia envolvente.</li>
-                          <li><strong>Mundo:</strong> Explora un vasto mundo abierto lleno de secretos y misterios por descubrir.</li>
-                          <li><strong>Personajes:</strong> Conviértete en el héroe de la historia y forja tu destino en batallas épicas.</li>
-                      </ul>  
-                  </p>
-                  <p style="text-align: justify;"><strong>Prepárate para una aventura increíble llena de magia y emoción.</strong></p>
+                        Descripción:
+                        <ul style="text-align: justify;">
+                            <li><strong>Género:</strong> Juego de rol de acción con gráficos impresionantes y una historia envolvente.</li>
+                            <li><strong>Mundo:</strong> Explora un vasto mundo abierto lleno de secretos y misterios por descubrir.</li>
+                            <li><strong>Personajes:</strong> Conviértete en el héroe de la historia y forja tu destino en batallas épicas.</li>
+                        </ul>  
+                    </p>
+                    <p style="text-align: justify;"><strong>Prepárate para una aventura increíble llena de magia y emoción.</strong></p>
                     <p class="videojuego-price">$50</p>
                     <button class="comprar-button">Comprar</button>
                 </div>
