--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta name="description" content="Tienda de videojuegos PWA">
     <title>Tienda de Videojuegos</title>
     <link rel="manifest" href="manifest.json">
+    <!-- Enlace a Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Enlace al nuevo archivo CSS externo -->
     <link rel="stylesheet" href="css/style.css">
     <script src="notificaciones.js"></script>
     <script src="videojuegos.js"></script>
 </head>
 <body>
-    <input type="checkbox" id="menu-toggle" class="menu-toggle">
-    <label for="menu-toggle">&#9776; Menu</label>
+    <!-- Utilizando Font Awesome para el icono del menú -->
+    <label id="menu-toggle" class="menu-toggle"><i class="fas fa-bars"></i> Menu</label>
     <div class="menu">
         <div class="menu-item"><a href="index.html">Home</a></div>
         <div class="menu-item"><a href="compras.html">Compras</a></div>
