--- a/nosotros.html
+++ b/nosotros.html
@@ -9,8 +9,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header>
+        <label for="menu-toggle">&#9776; Menu</label>
+        <div class="menu">
+            <div class="menu-item"><a href="index.html">Home</a></div>
+            <div class="menu-item"><a href="compras.html">Compras</a></div>
+            <div class="menu-item"><a href="nosotros.html">Nosotros</a></div>
+        </div>
+    </header>
     <div class="container">
-        <h1>Conoce más sobre nuestra Empresa/h1>
+        <h1>Conoce más sobre la Empresa</h1>
         <p>CSRtech Studio es una empresa fundada por cuatro apasionados de la tecnología y los videojuegos: Cesar Hernandez, Luis Garza, Adrian Rodriguez y Pablo Manriques. Su historia comienza hace varios años, cuando estos amigos se conocieron mientras estudiaban ingeniería en informática en la universidad.</p>
 
         <p>Desde el principio, compartían una visión común: crear experiencias digitales innovadoras que cautivaran a las personas de todas las edades. Su amor por los videojuegos y su fascinación por la tecnología los llevaron a unirse y formar CSRtech Studio.</p>
@@ -21,7 +29,7 @@
 
         <p>Con un equipo dedicado, una pasión compartida y un enfoque en la creatividad y la diversión, CSRtech Studio continúa su viaje hacia el éxito, emocionados por lo que el futuro les depara y por las experiencias digitales que están por venir.</p>
     </div>
-        <h1>Conoce más sobre nuestro equipo</h1>
+        <h1>Conoce más sobre nosotros y nuestro equipo</h1>
         <div class="team-member">
             <h2>Cesar Hernandez</h2>
             <p>Cesar es el visionario del grupo, siempre imaginando nuevos conceptos y mecánicas de juego emocionantes.</p>
