--- a/compras.html
+++ b/compras.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-        <label for="menu-toggle">&#9776; Menu</label>
-        <div class="menu">
-            <div class="menu-item"><a href="index.html">Home</a></div>
-            <div class="menu-item"><a href="compras.html">Compras</a></div>
-            <div class="menu-item"><a href="nosotros.html">Nosotros</a></div>
-        </div>
+        <label id="menu-toggle" class="menu-toggle">Menu</label>
+<div class="menu">
+    <div class="menu-item"><a href="index.html">Home</a></div>
+    <div class="menu-item"><a href="compras.html">Compras</a></div>
+    <div class="menu-item"><a href="nosotros.html">Nosotros</a></div>
+</div>
     </header>
     <h1>Explora nuestros productos y realiza tus compras</h1>
     <!-- Contenido de la página de compras -->
