--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
     <script src="videojuegos.js"></script>
 </head>
 <body>
-    <!-- Utilizando Font Awesome para el icono del menú -->
-    <label id="menu-toggle" class="menu-toggle"><i class="fas fa-bars"></i> Menu</label>
-    <div class="menu">
-        <div class="menu-item"><a href="index.html">Home</a></div>
-        <div class="menu-item"><a href="compras.html">Compras</a></div>
-        <div class="menu-item"><a href="nosotros.html">Nosotros</a></div>
-    </div>
+    <header>
+        <label id="menu-toggle" class="menu-toggle">Menu</label>
+        <div class="menu">
+            <div class="menu-item"><a href="index.html">Home</a></div>
+            <div class="menu-item"><a href="compras.html">Compras</a></div>
+            <div class="menu-item"><a href="nosotros.html">Nosotros</a></div>
+        </div>
 
+    </header>
     <div class="container">
         <h1>Bienvenido a la Tienda de Videojuegos</h1>
         <div class="videojuego-list">
