--- a/nosotros.html
+++ b/nosotros.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,44 +9,64 @@
     <!-- Enlaces a estilos CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
-        <label for="menu-toggle">&#9776; Menu</label>
+        <label id="menu-toggle" class="menu-toggle">Menu</label>
         <div class="menu">
             <div class="menu-item"><a href="index.html">Home</a></div>
             <div class="menu-item"><a href="compras.html">Compras</a></div>
             <div class="menu-item"><a href="nosotros.html">Nosotros</a></div>
         </div>
+
     </header>
     <div class="container">
         <h1>Conoce más sobre la Empresa</h1>
-        <p>CSRtech Studio es una empresa fundada por cuatro apasionados de la tecnología y los videojuegos: Cesar Hernandez, Luis Garza, Adrian Rodriguez y Pablo Manriques. Su historia comienza hace varios años, cuando estos amigos se conocieron mientras estudiaban ingeniería en informática en la universidad.</p>
+        <p>CSRtech Studio es una empresa fundada por cuatro apasionados de la tecnología y los videojuegos: Cesar
+            Hernandez, Luis Garza, Adrian Rodriguez y Pablo Manriques. Su historia comienza hace varios años, cuando
+            estos amigos se conocieron mientras estudiaban ingeniería en informática en la universidad.</p>
 
-        <p>Desde el principio, compartían una visión común: crear experiencias digitales innovadoras que cautivaran a las personas de todas las edades. Su amor por los videojuegos y su fascinación por la tecnología los llevaron a unirse y formar CSRtech Studio.</p>
+        <p>Desde el principio, compartían una visión común: crear experiencias digitales innovadoras que cautivaran a
+            las personas de todas las edades. Su amor por los videojuegos y su fascinación por la tecnología los
+            llevaron a unirse y formar CSRtech Studio.</p>
 
-        <p>Cada miembro del equipo aporta habilidades únicas y complementarias. Cesar es el visionario del grupo, siempre imaginando nuevos conceptos y mecánicas de juego emocionantes. Luis es el genio técnico, capaz de transformar esas ideas en realidad con su experiencia en programación y desarrollo de software. Adrian es el artista creativo, dando vida a los mundos y personajes con su talento en diseño gráfico y animación. Pablo es el experto en negocios, asegurándose de que el estudio crezca de manera sostenible y tenga éxito en el mercado.</p>
+        <p>Cada miembro del equipo aporta habilidades únicas y complementarias. Cesar es el visionario del grupo,
+            siempre imaginando nuevos conceptos y mecánicas de juego emocionantes. Luis es el genio técnico, capaz de
+            transformar esas ideas en realidad con su experiencia en programación y desarrollo de software. Adrian es el
+            artista creativo, dando vida a los mundos y personajes con su talento en diseño gráfico y animación. Pablo
+            es el experto en negocios, asegurándose de que el estudio crezca de manera sostenible y tenga éxito en el
+            mercado.</p>
 
-        <p>A lo largo de los años, CSRtech Studio ha creado una amplia gama de juegos que van desde aventuras épicas hasta rompecabezas desafiantes, siempre buscando innovar y sorprender a su audiencia. Su compromiso con la calidad y la excelencia los ha llevado a ganar reconocimiento en la industria y a construir una comunidad de jugadores apasionados en todo el mundo.</p>
+        <p>A lo largo de los años, CSRtech Studio ha creado una amplia gama de juegos que van desde aventuras épicas
+            hasta rompecabezas desafiantes, siempre buscando innovar y sorprender a su audiencia. Su compromiso con la
+            calidad y la excelencia los ha llevado a ganar reconocimiento en la industria y a construir una comunidad de
+            jugadores apasionados en todo el mundo.</p>
 
-        <p>Con un equipo dedicado, una pasión compartida y un enfoque en la creatividad y la diversión, CSRtech Studio continúa su viaje hacia el éxito, emocionados por lo que el futuro les depara y por las experiencias digitales que están por venir.</p>
+        <p>Con un equipo dedicado, una pasión compartida y un enfoque en la creatividad y la diversión, CSRtech Studio
+            continúa su viaje hacia el éxito, emocionados por lo que el futuro les depara y por las experiencias
+            digitales que están por venir.</p>
     </div>
-        <h1>Conoce más sobre nosotros y nuestro equipo</h1>
-        <div class="team-member">
-            <h2>Cesar Hernandez</h2>
-            <p>Cesar es el visionario del grupo, siempre imaginando nuevos conceptos y mecánicas de juego emocionantes.</p>
-        </div>
-        <div class="team-member">
-            <h2>Luis Garza</h2>
-            <p>Luis es el genio técnico, capaz de transformar las ideas en realidad con su experiencia en programación y desarrollo de software.</p>
-        </div>
-        <div class="team-member">
-            <h2>Adrian Rodriguez</h2>
-            <p>Adrian es el artista creativo, dando vida a los mundos y personajes con su talento en diseño gráfico y animación.</p>
-        </div>
-        <div class="team-member">
-            <h2>Pablo Manriques</h2>
-            <p>Pablo es el experto en negocios, asegurándose de que el estudio crezca de manera sostenible y tenga éxito en el mercado.</p>
-        </div>
+    <h1>Conoce más sobre nosotros y nuestro equipo</h1>
+    <div class="team-member">
+        <h2>Cesar Hernandez</h2>
+        <p>Cesar es el visionario del grupo, siempre imaginando nuevos conceptos y mecánicas de juego emocionantes.</p>
+    </div>
+    <div class="team-member">
+        <h2>Luis Garza</h2>
+        <p>Luis es el genio técnico, capaz de transformar las ideas en realidad con su experiencia en programación y
+            desarrollo de software.</p>
+    </div>
+    <div class="team-member">
+        <h2>Adrian Rodriguez</h2>
+        <p>Adrian es el artista creativo, dando vida a los mundos y personajes con su talento en diseño gráfico y
+            animación.</p>
+    </div>
+    <div class="team-member">
+        <h2>Pablo Manriques</h2>
+        <p>Pablo es el experto en negocios, asegurándose de que el estudio crezca de manera sostenible y tenga éxito en
+            el mercado.</p>
+    </div>
     </div>
 </body>
+
 </html>
