--- a/ventas.html
+++ b/ventas.html
@@ -8,6 +8,15 @@
     <!-- Enlaces a estilos CSS y scripts JavaScript -->
 </head>
 <body>
+    <header>
+        <label id="menu-toggle" class="menu-toggle">Menu</label>
+        <div class="menu">
+            <div class="menu-item"><a href="index.html">Home</a></div>
+            <div class="menu-item"><a href="compras.html">Compras</a></div>
+            <div class="menu-item"><a href="nosotros.html">Nosotros</a></div>
+        </div>
+
+    </header>
     <h1>Registra tus ventas y administra tu tienda</h1>
     <!-- Contenido de la página de ventas -->
 </body>
