actualizacion de paginas

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="notificaciones.js"></script>
     <script src="videojuegos.js"></script>
+    <script src="js/menu.js"></script>
 </head>
 <body>
     <header>
@@ -21,7 +22,6 @@
             <div class="menu-item"><a href="compras.html">Compras</a></div>
             <div class="menu-item"><a href="nosotros.html">Nosotros</a></div>
         </div>
-
     </header>
     <div class="container">
         <h1>Bienvenido a la Tienda de Videojuegos</h1>
