actualizacion de paginas

--- a/nosotros.html
+++ b/nosotros.html
@@ -45,7 +45,7 @@
         <p>Con un equipo dedicado, una pasión compartida y un enfoque en la creatividad y la diversión, CSRtech Studio
             continúa su viaje hacia el éxito, emocionados por lo que el futuro les depara y por las experiencias
             digitales que están por venir.</p>
-    </div>
+    </div class="container">
     <h1>Conoce más sobre nosotros y nuestro equipo</h1>
     <div class="team-member">
         <h2>Cesar Hernandez</h2>
