--- a/compras.html
+++ b/compras.html
@@ -8,14 +8,11 @@
     <!-- Enlaces a estilos CSS y scripts JavaScript -->
 </head>
 <body>
-    <header>
-        <label id="menu-toggle" class="menu-toggle">Menu</label>
-<div class="menu">
-    <div class="menu-item"><a href="index.html">Home</a></div>
-    <div class="menu-item"><a href="compras.html">Compras</a></div>
-    <div class="menu-item"><a href="nosotros.html">Nosotros</a></div>
-</div>
-    </header>
+    <nav class="navbar">
+        <a href="index.html" class="nav-item">Inicio</a>
+        <a href="compras.html" class="nav-item">Compras</a>
+        <a href="nosotros.html" class="nav-item">Nosotros</a>
+    </nav>
     <h1>Explora nuestros productos y realiza tus compras</h1>
     <!-- Contenido de la página de compras -->
 </body>
