--- a/nosotros.html
+++ b/nosotros.html
@@ -6,66 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Página 'Nosotros' de la Tienda de Videojuegos">
     <title>Nosotros - Tienda de Videojuegos</title>
-    <!-- Enlaces a estilos CSS -->
     <link rel="stylesheet" href="css/style.css">
+    
 </head>
 
 <body>
-    <header>
-        <label id="menu-toggle" class="menu-toggle">Menu</label>
-        <div class="menu">
-            <div class="menu-item"><a href="index.html">Home</a></div>
-            <div class="menu-item"><a href="compras.html">Compras</a></div>
-            <div class="menu-item"><a href="nosotros.html">Nosotros</a></div>
-        </div>
-
-    </header>
+    <nav class="navbar">
+        <a href="index.html" class="nav-item">Inicio</a>
+        <a href="ventas.html" class="nav-item">Compras</a>
+        <a href="nosotros.html" class="nav-item">Nosotros</a>
+    </nav>
     <div class="container">
         <h1>Conoce más sobre la Empresa</h1>
-        <p>CSRtech Studio es una empresa fundada por cuatro apasionados de la tecnología y los videojuegos: Cesar
-            Hernandez, Luis Garza, Adrian Rodriguez y Pablo Manriques. Su historia comienza hace varios años, cuando
+        <p><strong>CSRtech Studio</strong> es una empresa fundada por cuatro apasionados de la tecnología y los videojuegos: <strong>Cesar
+                Hernandez</strong>, <strong>Luis Garza</strong>, <strong>Adrian Rodriguez</strong> y <strong>Pablo Manriquez</strong>. Su historia comienza hace varios años, cuando
             estos amigos se conocieron mientras estudiaban ingeniería en informática en la universidad.</p>
 
-        <p>Desde el principio, compartían una visión común: crear experiencias digitales innovadoras que cautivaran a
-            las personas de todas las edades. Su amor por los videojuegos y su fascinación por la tecnología los
-            llevaron a unirse y formar CSRtech Studio.</p>
-
-        <p>Cada miembro del equipo aporta habilidades únicas y complementarias. Cesar es el visionario del grupo,
-            siempre imaginando nuevos conceptos y mecánicas de juego emocionantes. Luis es el genio técnico, capaz de
-            transformar esas ideas en realidad con su experiencia en programación y desarrollo de software. Adrian es el
-            artista creativo, dando vida a los mundos y personajes con su talento en diseño gráfico y animación. Pablo
-            es el experto en negocios, asegurándose de que el estudio crezca de manera sostenible y tenga éxito en el
-            mercado.</p>
-
-        <p>A lo largo de los años, CSRtech Studio ha creado una amplia gama de juegos que van desde aventuras épicas
+        <p>A lo largo de los años, <strong>CSRtech Studio</strong> ha creado una amplia gama de juegos que van desde aventuras épicas
             hasta rompecabezas desafiantes, siempre buscando innovar y sorprender a su audiencia. Su compromiso con la
             calidad y la excelencia los ha llevado a ganar reconocimiento en la industria y a construir una comunidad de
             jugadores apasionados en todo el mundo.</p>
 
-        <p>Con un equipo dedicado, una pasión compartida y un enfoque en la creatividad y la diversión, CSRtech Studio
+        <p>Con un equipo dedicado, una pasión compartida y un enfoque en la creatividad y la diversión, <strong>CSRtech Studio</strong>
             continúa su viaje hacia el éxito, emocionados por lo que el futuro les depara y por las experiencias
             digitales que están por venir.</p>
-    </div class="container">
-    <h1>Conoce más sobre nosotros y nuestro equipo</h1>
-    <div class="team-member">
-        <h2>Cesar Hernandez</h2>
-        <p>Cesar es el visionario del grupo, siempre imaginando nuevos conceptos y mecánicas de juego emocionantes.</p>
     </div>
-    <div class="team-member">
-        <h2>Luis Garza</h2>
-        <p>Luis es el genio técnico, capaz de transformar las ideas en realidad con su experiencia en programación y
-            desarrollo de software.</p>
-    </div>
-    <div class="team-member">
-        <h2>Adrian Rodriguez</h2>
-        <p>Adrian es el artista creativo, dando vida a los mundos y personajes con su talento en diseño gráfico y
-            animación.</p>
-    </div>
-    <div class="team-member">
-        <h2>Pablo Manriques</h2>
-        <p>Pablo es el experto en negocios, asegurándose de que el estudio crezca de manera sostenible y tenga éxito en
-            el mercado.</p>
-    </div>
+    <div class="container">
+        <h1>Conoce más sobre nosotros y nuestro equipo</h1>
+        <div class="team-member">
+            <h2><img src="images/user.jpg" alt="Cesar Hernandez"> Cesar Hernandez</h2>
+            <p>Cesar es el visionario del grupo, siempre imaginando nuevos conceptos y mecánicas de juego emocionantes.</p>
+        </div>
+        <div class="team-member">
+            <h2><img src="images/user.jpg" alt="Luis Garza"> Luis Garza</h2>
+            <p>Luis es el genio técnico, capaz de transformar las ideas en realidad con su experiencia en programación y
+                desarrollo de software.</p>
+        </div>
+        <div class="team-member">
+            <h2><img src="images/user.jpg" alt="Adrian Rodriguez"> Adrian Rodriguez</h2>
+            <p>Adrian es el artista creativo, dando vida a los mundos y personajes con su talento en diseño gráfico y
+                animación.</p>
+        </div>
+        <div class="team-member">
+            <h2><img src="images/user.jpg" alt="Pablo Manriques"> Pablo Manriquez</h2>
+            <p>Pablo es el experto en negocios, asegurándose de que el estudio crezca de manera sostenible y tenga éxito en
+                el mercado.</p>
+        </div>
     </div>
 </body>
 
