--- a/ventas.html
+++ b/ventas.html
@@ -6,17 +6,14 @@
     <meta name="description" content="Página de ventas de la Tienda de Videojuegos">
     <title>Ventas - Tienda de Videojuegos</title>
     <!-- Enlaces a estilos CSS y scripts JavaScript -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <label id="menu-toggle" class="menu-toggle">Menu</label>
-        <div class="menu">
-            <div class="menu-item"><a href="index.html">Home</a></div>
-            <div class="menu-item"><a href="compras.html">Compras</a></div>
-            <div class="menu-item"><a href="nosotros.html">Nosotros</a></div>
-        </div>
-
-    </header>
+    <nav class="navbar">
+        <a href="index.html" class="nav-item">Inicio</a>
+        <a href="ventas.html" class="nav-item">Compras</a>
+        <a href="nosotros.html" class="nav-item">Nosotros</a>
+    </nav>
     <h1>Registra tus ventas y administra tu tienda</h1>
     <!-- Contenido de la página de ventas -->
 </body>
