--- a/pago.html
+++ b/pago.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <nav class="navbar">
+        <div class="logo">
+            <img src="images/logo.png" alt="Logo de CSRTechStudio">
+        </div>       
         <a href="index.html" class="nav-item">Inicio</a>
         <a href="ventas.html" class="nav-item">Tienda de Videojuegos</a>
         <a href="nosotros.html" class="nav-item">Nosotros</a>
