--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="images/icons/favicon.ico">
-    <script src="notificaciones.js"></script>
-    <script src="videojuegos.js"></script>
+    <script src="js/notificationsHandler.js"></script>
+    <script src="js/videojuegos.js"></script>
+    
     
 </head>
 <body>
@@ -55,6 +56,7 @@
         <p>&copy; 2024 CSRTechStudio. Todos los derechos reservados.</p>
     </footer>
     <script src="js/register-sw.js"></script>
+    <script src="serviceWorker.js"></script>
     <script src="js/notificationsHandler.js"></script>
 </body>
 </html>
