--- a/pago.html
+++ b/pago.html
@@ -15,7 +15,7 @@
             <img src="images/logo.png" alt="Logo de CSRTechStudio">
         </div>       
         <a href="index.html" class="nav-item">Inicio</a>
-        <a href="ventas.html" class="nav-item">Tienda de Videojuegos</a>
+        <a href="ventas.html" class="nav-item">Tienda</a>
         <a href="nosotros.html" class="nav-item">Nosotros</a>
         <div id="cart-button" class="nav-item">
             <img src="images/cart-count.png" alt="Carrito de Compras">
