--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="images/icons/favicon.ico">
-    <script src="js/notificationsHandler.js"></script>
-    <script src="js/videojuegos.js"></script>
+    <script src="/pwa-gamepage.github.io/js/register-sw.js"></script>
+    <script src="/pwa-gamepage.github.io/js/requestNotificationPermission.js"></script>
     
     
 </head>
