--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" href="images/icons/favicon.ico">
     <script src="/pwa-gamepage.github.io/js/register-sw.js"></script>
     <script src="/pwa-gamepage.github.io/js/requestNotificationPermission.js"></script>
+    <script scr="/pwa-gamepage.github.io/js/ventas-notificaciones.js"></script>
     
     
 </head>
@@ -19,7 +20,7 @@
             <img src="images/logo.png" alt="Logo de CSRTechStudio">
         </div>
         <a href="index.html" class="nav-item">Inicio</a>
-        <a href="ventas.html" class="nav-item">Tienda</a>
+        <a href="ventas.html" id="ventas-link" class="nav-item">Tienda</a>
         <a href="nosotros.html" class="nav-item">Nosotros</a>
         <div id="cart-button" class="nav-item">
             <img src="images/cart-count.png" alt="Carrito de Compras">
