--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="images/icons/favicon.ico">
-    <script src="/pwa-gamepage.github.io/js/register-sw.js"></script>
-    <script src="/pwa-gamepage.github.io/js/requestNotificationPermission.js"></script>
-    <script scr="/pwa-gamepage.github.io/js/ventas-notificaciones.js"></script>
+    <script src="js/register-sw.js"></script>
+    <script src="js/requestNotificationPermission.js"></script>
+    <script scr="js/ventas-notificaciones.js"></script>
     
     
 </head>
